# ai-agents-frameworks

./: FRAMEWORK_EXAMPLE_GENERATION_GUIDE.md  README.md  _config.yml
ag2/: 0_sample_agent.py  1_agent_with_tools.py  2_structured_outputs.py  3_human_in_the_loop.py  4_multi_agent.py  pyproject.toml  settings.py
agno/: .env.example  1_simple_agent.py  2_async.py  3_streaming.py  4_parallel_tool_calling.py  5_human_in_the_loop.py  6_workflow_example.py  pyproject.toml  settings.py
autogen/: pyproject.toml
crewai/: 10_multi_agent_collaboration.py  11_flows.py  12_flows_with_agents.py  13_crew_simplification.py  pyproject.toml  requirements.txt
crewai/config/: agents.yaml  tasks.yaml
crewai/plots/: simple_flow_plot.html  simple_flow_with_agents_plot.html
google-adk/: 0_hello_world.py  1_tools.py  2_built_in_tools.py  3_agents_as_tools.py  4_multi_agent_systems.py  5_workflow_agents.py  6_callbacks.py  pyproject.toml  settings.py
guides/: how-agents-work.md  index.md  openclaw.md
langgraph/langgraph-examples/: pyproject.toml
llama-index/: .env.example  00_hello_world.py  01_tools.py  02_structured_outputs.py  03_memory.py  04_streaming.py  05_memory_advanced.py  06_agent_types.py  07_multi_modal_agents.py  08_manual_agents.py  09_agent_delegation.py  10_agentic_rag.py  11_agent_workflows.py  1_router_engine.py  2_tool_calling.py  README.md  pyproject.toml  settings.py
llama-index/agent_workflows/: 01_gettings_started.py  02_branches_and_loops.py  03_managing_state.py  04_streaming.py  05_concurrent_execution.py  06_human_in_the_loop.py  07_customizing_entry_exit_points.py  08_drawing_workflow.py  09_resource_objects.py  10_retry_steps_execution.py  11_workflow_as_a_server.py  12_observability.py  README.md
openai-agents-sdk/: .env.example  0_hello_world.py  1_tools_and_metrics.py  2_structured_outputs.py  3_parallelization_in_workflow.py  4_handoffs_and_streaming.py  5_agents_as_tools.py  6_output_guardrails.py  7_llm_as_a_judge.py  8_tracing.py  pyproject.toml  settings.py
pydantic-ai/: pyproject.toml
smolagents/smolagents-simple-examples/: pyproject.toml
strands-agents/: README.md
study-agents-differences/: pyproject.toml
