[project]
name = "agno-examples"
version = "0.1.0"
description = "Agno framework examples"
requires-python = ">=3.12"
dependencies = [
    "agno==1.1.4",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "arxiv==2.1.3",
    "beautifulsoup4==4.13.3",
    "Brotli==1.1.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "docstring_parser==0.16",
    "duckduckgo_search==7.4.2",
    "feedparser==6.0.11",
    "frozendict==2.4.6",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "jiter==0.8.2",
    "lancedb==0.19.0",
    "lxml==5.3.1",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "multitasking==0.0.11",
    "numpy==2.2.3",
    "openai==1.63.2",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "peewee==3.17.9",
    "platformdirs==4.3.6",
    "pyarrow==19.0.0",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "pydantic_core==2.27.2",
    "Pygments==2.19.1",
    "pylance==0.23.0",
    "pypdf==5.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pytz==2025.1",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "tiktoken==0.8.0",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "yfinance==0.2.53",
]
