[project]
name = "autogen-examples"
version = "0.1.0"
description = "AutoGen framework examples"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "autogen-agentchat==0.7.2",
    "autogen-core==0.7.2",
    "autogen-ext==0.7.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "Deprecated==1.2.18",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib_metadata==8.5.0",
    "jiter==0.8.2",
    "jsonref==1.1.0",
    "nest-asyncio==1.6.0",
    "openai==1.99.9",
    "opentelemetry-api==1.36.0",
    "pillow==11.1.0",
    "protobuf==5.29.5",
    "pydantic==2.10.6",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.27.2",
    "python-dotenv==1.1.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "tiktoken==0.8.0",
    "tqdm==4.67.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "wrapt==1.17.2",
    "zipp==3.21.0",
]
