[project]
name = "llama-index-examples"
version = "0.1.0"
description = "LlamaIndex framework examples"
requires-python = ">=3.12"
dependencies = [
    "llama-index>=0.12.0",
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index-embeddings-openai>=0.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "openai>=1.60.0",
]
