[project]
name = "pydantic-ai-examples"
version = "0.1.0"
description = "Pydantic AI framework examples"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-ai>=0.0.24",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "openai>=1.60.0",
    "anthropic>=0.40.0",
]
