[project]
name = "study-agents-differences"
version = "0.1.0"
description = "Study of different agent frameworks"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.4.0",
    "agno==1.1.8",
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.12",
    "aiosignal==1.3.2",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anthropic==0.46.0",
    "anyio==4.8.0",
    "asttokens==3.0.0",
    "attrs==25.1.0",
    "azure-ai-inference==1.0.0b9",
    "azure-core==1.32.0",
    "azure-identity==1.20.0",
    "beautifulsoup4==4.13.3",
    "blinker==1.9.0",
    "cachetools==5.5.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cohere==5.13.12",
    "colorama==0.4.6",
    "comm==0.2.2",
    "cryptography==44.0.2",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.12",
    "decorator==5.2.1",
    "Deprecated==1.2.18",
    "dirtyjson==1.0.8",
    "distro==1.9.0",
    "docstring_parser==0.16",
    "eval_type_backport==0.2.2",
    "executing==2.2.0",
    "fastavro==1.10.0",
    "filelock==3.17.0",
    "filetype==1.2.0",
    "frozenlist==1.5.0",
    "fsspec==2025.2.0",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "google-auth==2.38.0",
    "greenlet==3.1.1",
    "griffe==1.5.7",
    "groq==0.18.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.29.1",
    "idna==3.10",
    "importlib_metadata==8.6.1",
    "ipykernel==6.29.5",
    "ipython==9.0.0",
    "ipython_pygments_lexers==1.1.1",
    "isodate==0.7.2",
    "jedi==0.19.2",
    "Jinja2==3.1.5",
    "jiter==0.8.2",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpath-python==1.0.6",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "langchain-core==0.3.37",
    "langchain-huggingface==0.1.2",
    "langchain-openai==0.3.6",
    "langgraph==0.2.74",
    "langgraph-checkpoint==2.0.16",
    "langgraph-sdk==0.1.53",
    "langsmith==0.3.8",
    "litellm==1.61.11",
    "llama-cloud==0.1.13",
    "llama-cloud-services==0.6.1",
    "llama-index==0.12.19",
    "llama-index-agent-openai==0.4.6",
    "llama-index-cli==0.4.0",
    "llama-index-core==0.12.19",
    "llama-index-embeddings-openai==0.3.1",
    "llama-index-indices-managed-llama-cloud==0.6.8",
    "llama-index-llms-azure-openai==0.3.0",
    "llama-index-llms-huggingface==0.4.2",
    "llama-index-llms-huggingface-api==0.3.1",
    "llama-index-llms-openai==0.3.20",
    "llama-index-multi-modal-llms-openai==0.4.3",
    "llama-index-program-openai==0.3.1",
    "llama-index-question-gen-openai==0.3.0",
    "llama-index-readers-file==0.4.5",
    "llama-index-readers-llama-parse==0.4.0",
    "llama-parse==0.6.1",
    "logfire-api==3.6.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistralai==1.5.0",
    "mpmath==1.3.0",
    "msal==1.31.1",
    "msal-extensions==1.2.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "narwhals==1.27.1",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.2.3",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "openai==1.63.2",
    "orjson==3.10.15",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "portalocker==2.10.1",
    "prompt_toolkit==3.0.50",
    "propcache==0.2.1",
    "protobuf==5.29.3",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pyarrow==19.0.1",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-ai==0.0.24",
    "pydantic-ai-slim==0.0.24",
    "pydantic-graph==0.0.24",
    "pydantic-settings==2.7.1",
    "pydantic_core==2.27.2",
    "pydeck==0.9.1",
    "Pygments==2.19.1",
    "PyJWT==2.10.1",
    "pypdf==5.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pytz==2025.1",
    "PyYAML==6.0.2",
    "pyzmq==26.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "rsa==4.9",
    "safetensors==0.5.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==3.4.1",
    "setuptools==75.8.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "SQLAlchemy==2.0.38",
    "stack-data==0.6.3",
    "streamlit==1.42.1",
    "striprtf==0.0.26",
    "sympy==1.13.1",
    "tavily-python==0.5.1",
    "tenacity==9.0.0",
    "text-generation==0.7.0",
    "threadpoolctl==3.5.0",
    "tiktoken==0.9.0",
    "tokenizers==0.21.0",
    "toml==0.10.2",
    "tomli==2.2.1",
    "torch==2.6.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.49.0",
    "triton==3.2.0",
    "typer==0.15.1",
    "types-requests==2.32.0.20241016",
    "typing-inspect==0.9.0",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "wrapt==1.17.2",
    "yarl==1.18.3",
    "zipp==3.21.0",
    "zstandard==0.23.0",
]
