[project]
name = "smolagents-examples"
version = "0.1.0"
description = "SmoLAgents framework examples"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.12",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout==5.0.1",
    "attrs==25.1.0",
    "beautifulsoup4==4.13.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "distro==1.9.0",
    "duckduckgo_search==7.3.1",
    "exceptiongroup==1.2.2",
    "filelock==3.17.0",
    "frozenlist==1.5.0",
    "fsspec==2025.2.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.28.1",
    "idna==3.10",
    "importlib_metadata==8.6.1",
    "Jinja2==3.1.5",
    "jiter==0.8.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "litellm==1.60.6",
    "lxml==5.3.0",
    "markdown-it-py==3.0.0",
    "markdownify==0.14.1",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.1.0",
    "numpy==2.2.2",
    "openai==1.61.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "primp==0.12.0",
    "propcache==0.2.1",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "pydantic_core==2.27.2",
    "Pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "PyYAML==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "six==1.17.0",
    "smolagents==1.7.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "tiktoken==0.8.0",
    "tokenizers==0.21.0",
    "tqdm==4.67.1",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "yarl==1.18.3",
    "zipp==3.21.0",
]
